--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
    <link rel="stylesheet" href="/css/main.css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="container">
    <p>
       loh
    </p>
+   <button class=" btn">
+      Download Resume
+   </button>
 </body>
 
 </html>
