finished header with adaptive and menu burger

--- a/index.html
+++ b/index.html
@@ -12,13 +12,29 @@
    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
-<body class="container">
-   <p>
-      loh
-   </p>
-   <button class=" btn">
-      Download Resume
-   </button>
+<body>
+
+   <!------- HEADER ------->
+
+   <header class="header">
+      <div class=" header__content " id="menu">
+         <div class="header__menu menu">
+            <nav class="menu__body">
+               <ul class="menu__list">
+                  <li><a href="" class="menu__link">Works</a></li>
+                  <li><a href="" class="menu__link">Blog</a></li>
+                  <li><a href="" class="menu__link">Contact</a></li>
+               </ul>
+            </nav>
+         </div>
+      </div>
+      <a href=""><img src="/img/burger/burger.svg" alt="menu-burger" class="menu__icon" id="burger"></a>
+   </header>
+
+   <!------- HEADER ------->
+
+   <script src="js/app.js"></script>
+
 </body>
 
 </html>
