finished title part of main page with adaptive

--- a/index.html
+++ b/index.html
@@ -17,21 +17,52 @@
    <!------- HEADER ------->
 
    <header class="header">
-      <div class=" header__content " id="menu">
-         <div class="header__menu menu">
-            <nav class="menu__body">
-               <ul class="menu__list">
-                  <li><a href="" class="menu__link">Works</a></li>
-                  <li><a href="" class="menu__link">Blog</a></li>
-                  <li><a href="" class="menu__link">Contact</a></li>
-               </ul>
-            </nav>
+      <div class="header__body ">
+         <div class=" header__content _container " id="menu">
+            <div class="header__menu menu">
+               <nav class="menu__body">
+                  <ul class="menu__list">
+                     <li><a href="" class="menu__link">Works</a></li>
+                     <li><a href="" class="menu__link">Blog</a></li>
+                     <li><a href="" class="menu__link">Contact</a></li>
+                  </ul>
+               </nav>
+            </div>
          </div>
+         <a href=""><img src="/img/burger/burger.svg" alt="menu-burger" class="menu__icon" id="burger"></a>
       </div>
-      <a href=""><img src="/img/burger/burger.svg" alt="menu-burger" class="menu__icon" id="burger"></a>
    </header>
 
    <!------- HEADER ------->
+
+   <!-------- MAIN--------->
+
+   <main class="page">
+      <div class="hello">
+         <div class="hello__container ">
+            <div class="hello__content">
+               <h1 class="hello__title title">
+                  Hi, I am John,<br>
+                  Creative Technologist
+               </h1>
+               <div class="hello__text text">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis
+                  enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+               </div>
+               <a href="" class="btn">Download Resume</a>
+            </div>
+            <div class="hello__avatar">
+               <img src="/img/main_hello/photo/photo.jpg" alt="dog face">
+            </div>
+         </div>
+      </div>
+
+
+   </main>
+
+
+   <!-------- MAIN--------->
+
 
    <script src="js/app.js"></script>
 
