--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
    <!-------- MAIN--------->
 
    <main class="page">
-      <div class="hello">
+
+      <section class="hello">
          <div class="hello__container ">
             <div class="hello__content">
-               <h1 class="hello__title title">
+               <h1 class="hello__title">
                   Hi, I am John,<br>
                   Creative Technologist
                </h1>
@@ -55,8 +56,36 @@
                <img src="/img/main_hello/photo/photo.jpg" alt="dog face">
             </div>
          </div>
-      </div>
+      </section>
 
+      <section class="recent-posts">
+         <div class="recent-posts__container">
+            <div class="recent-posts__header">
+               <div class="recent-posts__title">Recent posts</div>
+               <a href="" class="recent-posts__wiew-all">View all</a>
+            </div>
+            <div class="recent-posts__items">
+               <div class="recent-post">
+                  <a class="recent-post__title title">Making a design system from scratch</a>
+                  <div class="recent-post__info">12 Feb 2020 <span>|</span>Design, Pattern</div>
+                  <div class="recent-post__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                     amet
+                     sint.
+                     Velit
+                     officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+               </div>
+               <div class=" recent-post">
+                  <a class="recent-post__title title">Creating pixel perfect icons in Figma</a>
+                  <div class="recent-post__info">12 Feb 2020 <span>|</span>Figma, Icon Design</div>
+                  <div class="recent-post__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                     amet
+                     sint.
+                     Velit
+                     officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
+               </div>
+            </div>
+         </div>
+      </section>
 
    </main>
 
