--- a/index.html
+++ b/index.html
@@ -87,8 +87,67 @@
          </div>
       </section>
 
+      <section class="featured-works">
+         <div class="featured-works__container">
+            <div class="featured-works__header">
+               <div class="featured-works__title">
+                  Featured-works
+               </div>
+            </div>
+            <div class="featured-works__items">
+               <div class="featured-works__item item-featured-works">
+                  <a href="" class="item-featured-works__img">
+                     <img src="/img/main_featured-works/dashboard.svg" alt="picture of feqtured works dashboard">
+                  </a>
+                  <div class="item-featured-works__description item-description">
+                     <div class="item-description__title">Designing Dashboards</div>
+                     <div class="item-description__info"><span>2020</span>Dashboard</div>
+                     <div class="item-description__text text">Amet minim mollit non deserunt ullamco est sit aliqua
+                        dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam
+                        consequat sunt nostrud amet.</div>
+                  </div>
+               </div>
+               <div class="featured-works__item item-featured-works">
+                  <a href="" class="item-featured-works__img"><img src="/img/main_featured-works/illustration.svg"
+                        alt="picture of feqtured works illustration"></a>
+                  <div class="item-featured-works__description item-description">
+                     <div class="item-description__title">Vibrant Portraits of 2020</div>
+                     <div class="item-description__info"><span>2018</span>Illustration</div>
+                     <div class="item-description__text text">Amet minim mollit non deserunt ullamco est sit aliqua
+                        dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam
+                        consequat sunt nostrud amet.</div>
+                  </div>
+               </div>
+               <div class="featured-works__item item-featured-works">
+                  <a href="" class="item-featured-works__img"><img src="/img/main_featured-works/typography.svg"
+                        alt="picture of feqtured works typography"></a>
+                  <div class="item-featured-works__description item-description">
+                     <div class="item-description__title">36 Days of Malayalam type</div>
+                     <div class="item-description__info"><span>2018</span>Typography</div>
+                     <div class="item-description__text text">Amet minim mollit non deserunt ullamco est sit aliqua
+                        dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam
+                        consequat sunt nostrud amet.</div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+
    </main>
 
+   <footer class="footer">
+      <div class="footer__container">
+         <div class="links">
+            <a href=""><img src="/img/footer/fb.svg" alt="social media link to facebook"></a>
+            <a href=""><img src="/img/footer/insta.svg" alt="social media link to instagram"></a>
+            <a href=""><img src="/img/footer/twiter.svg" alt="social media link to twiter"></a>
+            <a href=""><img src="/img/footer/Linkedin.svg" alt="social media link to linkedin"></a>
+         </div>
+         <div class="copyright">
+            Copyright ©2020 All rights reserved
+         </div>
+      </div>
+   </footer>
 
    <!-------- MAIN--------->
 
