--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
             <div class="header__menu menu">
                <nav class="menu__body">
                   <ul class="menu__list">
+                     <li><a href="" class="menu__link">Home</a></li>
                      <li><a href="" class="menu__link">Works</a></li>
-                     <li><a href="" class="menu__link">Blog</a></li>
+                     <li><a href="/blog-page.html" class="menu__link">Blog</a></li>
                      <li><a href="" class="menu__link">Contact</a></li>
                   </ul>
                </nav>
