finished (work) in main page with adaptive

--- a/blog-page.html
+++ b/blog-page.html
@@ -23,7 +23,7 @@
                <nav class="menu__body">
                   <ul class="menu__list">
                      <li><a href="/index.html" class="menu__link">Home</a></li>
-                     <li><a href="" class="menu__link">Works</a></li>
+                     <li><a href="/work-page.html" class="menu__link">Works</a></li>
                      <li><a href="" class="menu__link">Blog</a></li>
                      <li><a href="" class="menu__link">Contact</a></li>
                   </ul>
@@ -36,7 +36,6 @@
 
    <!------- HEADER ------->
 
-   <!-------- MAIN--------->
 
    <main class="blog">
       <div class="blog__container">
@@ -89,8 +88,6 @@
             </div>
          </div>
       </div>
-
-
    </main>
 
    <footer class="footer">
