--- a/work-page.html
+++ b/work-page.html
@@ -23,8 +23,8 @@
                <nav class="menu__body">
                   <ul class="menu__list">
                      <li><a href="/index.html" class="menu__link">Home</a></li>
-                     <li><a href="/work-page.html" class="menu__link">Works</a></li>
-                     <li><a href="/blog-page.html" class="menu__link">Blog</a></li>
+                     <li><a href="" class="menu__link">Works</a></li>
+                     <li><a href="" class="menu__link">Blog</a></li>
                      <li><a href="" class="menu__link">Contact</a></li>
                   </ul>
                </nav>
@@ -36,67 +36,13 @@
 
    <!------- HEADER ------->
 
-   <!-------- MAIN--------->
 
-   <main class="page">
-
-      <section class="hello">
-         <div class="hello__container ">
-            <div class="hello__content">
-               <h1 class="hello__title">
-                  Hi, I am John,<br>
-                  Creative Technologist
-               </h1>
-               <div class="hello__text text">
-                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis
-                  enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
-               </div>
-               <a href="" class="btn">Download Resume</a>
-            </div>
-            <div class="hello__avatar">
-               <img src="/img/main_hello/photo/photo.jpg" alt="dog face">
-            </div>
-         </div>
-      </section>
-
-      <section class="recent-posts">
-         <div class="recent-posts__container">
-            <div class="recent-posts__header">
-               <div class="recent-posts__title">Recent posts</div>
-               <a href="" class="recent-posts__wiew-all">View all</a>
-            </div>
-            <div class="recent-posts__items">
-               <div class="recent-post">
-                  <a class="recent-post__title title">Making a design system from scratch</a>
-                  <div class="recent-post__info">12 Feb 2020 <span>|</span>Design, Pattern</div>
-                  <div class="recent-post__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                     amet
-                     sint.
-                     Velit
-                     officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
-               </div>
-               <div class=" recent-post">
-                  <a class="recent-post__title title">Creating pixel perfect icons in Figma</a>
-                  <div class="recent-post__info">12 Feb 2020 <span>|</span>Figma, Icon Design</div>
-                  <div class="recent-post__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                     amet
-                     sint.
-                     Velit
-                     officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
-               </div>
-            </div>
-         </div>
-      </section>
-
-      <section class="featured-works">
-         <div class="featured-works__container">
-            <div class="featured-works__header">
-               <div class="featured-works__title">
-                  Featured-works
-               </div>
-            </div>
-            <div class="featured-works__items">
-               <div class="featured-works__item work-block">
+   <main class="work">
+      <div class="work__container">
+         <div class="work__content">
+            <h1 class="work__title title">Work</h1>
+            <div class="works-section">
+               <div class="works-section__item work-block">
                   <a href="" class="work-block__img">
                      <img src="/img/main_featured-works/dashboard.svg" alt="picture of feqtured works dashboard">
                   </a>
@@ -109,7 +55,7 @@
                         consequat sunt nostrud amet.</div>
                   </div>
                </div>
-               <div class="featured-works__item work-block">
+               <div class="works-section__item work-block">
                   <a href="" class="work-block__img"><img src="/img/main_featured-works/illustration.svg"
                         alt="picture of feqtured works illustration"></a>
                   <div class="work-block__description item-description">
@@ -121,10 +67,10 @@
                         consequat sunt nostrud amet.</div>
                   </div>
                </div>
-               <div class="featured-works__item work-block">
+               <div class="works-section__item work-block">
                   <a href="" class="work-block__img"><img src="/img/main_featured-works/typography.svg"
                         alt="picture of feqtured works typography"></a>
-                  <div class="work-block__description item-description">
+                  <div class="work-block__description">
                      <div class="work-block-description__title">36 Days of Malayalam type</div>
                      <div class="work-block-description__info"><span>2018</span>Typography</div>
                      <div class="work-block-description__text text">Amet minim mollit non deserunt ullamco est sit
@@ -133,9 +79,33 @@
                         consequat sunt nostrud amet.</div>
                   </div>
                </div>
+               <div class="works-section__item work-block">
+                  <a href="" class="work-block__img"><img src="/img/main_featured-works/typography.svg"
+                        alt="picture of feqtured works typography"></a>
+                  <div class="work-block__description">
+                     <div class="work-block-description__title">36 Days of Malayalam type</div>
+                     <div class="work-block-description__info"><span>2018</span>Typography</div>
+                     <div class="work-block-description__text text">Amet minim mollit non deserunt ullamco est sit
+                        aliqua
+                        dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam
+                        consequat sunt nostrud amet.</div>
+                  </div>
+               </div>
+               <div class="works-section__item work-block">
+                  <a href="" class="work-block__img"><img src="/img/main_featured-works/conponent-design.svg"
+                        alt="picture of feqtured works typography"></a>
+                  <div class="work-block__description">
+                     <div class="work-block-description__title">Components</div>
+                     <div class="work-block-description__info"><span>2018</span>Components, Design</div>
+                     <div class="work-block-description__text text">Amet minim mollit non deserunt ullamco est sit
+                        aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam
+                        consequat sunt nostrud amet.</div>
+                  </div>
+               </div>
             </div>
          </div>
-      </section>
+      </div>
+
 
    </main>
 
