finished page (designing dashboards) without adptive

--- a/work-page.html
+++ b/work-page.html
@@ -43,7 +43,7 @@
             <h1 class="work__title title">Work</h1>
             <div class="works-section">
                <div class="works-section__item work-block">
-                  <a href="" class="work-block__img">
+                  <a href="/designing-dashboards-page.html" class="work-block__img">
                      <img src="/img/main_featured-works/dashboard.svg" alt="picture of feqtured works dashboard">
                   </a>
                   <div class="work-block-description work-block-description">
