finished (designing dashboards) with adaptive

--- a/designing-dashboards-page.html
+++ b/designing-dashboards-page.html
@@ -41,12 +41,14 @@
       <div class="design-dashboards__container">
          <div class="design-dashboards__content article">
             <h1 class="article__title title">Designing Dashboards with <br> usability in mind</h1>
-            <div class="article__info"><span>2020</span>Dashboard, User Experience Design</div>
+            <div class="article__info"><span>2020</span>
+               <div>Dashboard, User Experience Design</div>
+            </div>
             <div class="article__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
                Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
-            <!-- <div class="article__image">
+            <div class="article__image">
                <img src="/img/designing_dashboards-page/1.svg" alt="example of work">
-            </div> -->
+            </div>
             <div class=" article__text text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
                Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
             <div class=" article__image">
@@ -56,9 +58,6 @@
                <img src="/img/designing_dashboards-page/3.svg" alt="example of work">
             </div>
          </div>
-         <a href="/designing-dashboards-page.html" class="work-block__img">
-            <img src="/img/main_featured-works/dashboard.svg" alt="picture of feqtured works dashboard">
-         </a>
       </div>
       </div>
 
